--- a/style.css
+++ b/style.css
@@ -110,6 +110,7 @@ body
    background: #444;
 }
 
+/*
 #gear-column
 {
    position: absolute;
@@ -120,6 +121,7 @@ body
    width: 270px;
    background: url(gear.jpg);
 }
+*/
 
 .panel-arrow
 {
@@ -246,4 +248,19 @@ h1
    padding-top: 10px;
 
    font-family: "Yanone Kaffeesatz", sans-serif;
+}
+
+.check-out
+{
+   font-family: 'Oleo Script Swash Caps', cursive;
+   font-size: 18pt;
+   color: white;
+   text-align: center;
+
+   text-shadow: 0px 0px 6px black;
+}
+
+.check-out i
+{
+   font-size: 14pt;
 }
