--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body
 {
    background-color: black;
    overflow: hidden;
+
+   min-height: 480px;
 }
 
 #background
@@ -9,6 +11,8 @@ body
    position: absolute;
    top: 0px;
    left: 0px;
+   right: 0px;
+   bottom: 0px;
    z-index: -2;
 
    -moz-user-select: none; 
@@ -22,7 +26,7 @@ body
    position: absolute;;
    top: 0px;
    left: 0px;
-   right: 0px;
+   right: -1px;
    bottom: 0px;
 
    background-color: black;
@@ -141,18 +145,19 @@ body
 #content
 {
    overflow: scroll;
+   -webkit-overflow-scrolling: touch;
    padding-bottom: 40px;
 
    position: absolute;
    z-index: 2;
 
    top: 0px;
-   right: 0px;
+   right: -1px;
    bottom: 0px;
    left: 0px;
 
    background-color: black;
-   background-color: rgba(0, 0, 0, 0.9);
+   background-color: rgba(0,0,0,0.9);
 
    display: none;
 }
