--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@ body
    margin-top: -8px;
    margin-right: 10px;
    width: 160px;
+
+   zoom: 1;
+   *display: inline;
 }
 
 .panel-intro
@@ -157,9 +160,14 @@ body
    left: 0px;
 
    background-color: black;
-   background-color: rgba(0,0,0,0.9);
+   background-color: black rgba(0,0,0,0.9);
 
    display: none;
+}
+
+html>body #content
+{
+   background-color: black;
 }
 
 .content-title
@@ -268,4 +276,5 @@ h1
 .check-out i
 {
    font-size: 14pt;
+
 }
