--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body
 {
    position: absolute;
    top: 0px;
-   left: 0px;
+   
    right: 0px;
    bottom: 0px;
    z-index: -2;
@@ -84,62 +84,60 @@ body
    top: 30px;
    left: -60px;
    width: 627px;
-   height: 104px;
+   height: 236px;
 
    background-image: url(name-banner.png);
 }
 
-#menu-column
+#menu
 {
    position: absolute;
-   right: 54px;
-   bottom: 54px;
-   width: 380px;
+   left: 0px;
+   bottom: 10%;
+   right: 0px;
 
-   height: 304px;
+   height: 130px;
+   overflow: hidden;
 }
 
 .panel
 {
    color: white;
+   display: inline-block;
 
    text-align: left;
 
-   padding-top: 10px;
-   padding-bottom: 10px;
+   margin: 0px;
    padding-left: 0px;
    padding-right: 0px;
 
-   width: 380px;
+   padding-top: 10px;
+   padding-bottom: 10px;
+
+   width: 20%;
 
    cursor: pointer;
-   vertical-align: middle;
+   vertical-align: top;
 
-   height: 34px;
+   text-align: center;
 }
 
 .panel-punchline
 {
-   display: inline-block;
+   display: block;
    font-size: 26pt;
    font-weight: 700;
-   text-align: right;
 
-   margin-top: -8px;
-   margin-right: 10px;
-   width: 160px;
-
-   zoom: 1;
-   *display: inline;
+   margin-bottom: -10px;
 }
 
 .panel-intro
 {
-   display: inline;
+   display: block;
    font-size: 20pt;
    font-weight: 200;
 
-   margin-left: 6px;
+   padding-bottom: 3px;
 }
 
 .panel:hover
@@ -147,20 +145,7 @@ body
    background: #444;
 }
 
-/*
-#gear-column
-{
-   position: absolute;
-   right: 434px;
-   bottom: 54px;
-
-   height: 270px;
-   width: 270px;
-   background: url(gear.jpg);
-}
-*/
-
-.panel-arrow
+.panel-intro i
 {
    display: inline;
    font-size: 18px;
@@ -296,7 +281,9 @@ h1
    font-family: 'Oleo Script Swash Caps', cursive;
    font-size: 18pt;
    color: white;
-   text-align: center;
+   text-align: right;
+
+   padding-right: 100px;
 
    text-shadow: 0px 0px 6px black;
 }
@@ -305,4 +292,20 @@ h1
 {
    font-size: 14pt;
 
+}
+
+
+/* Support for smaller displays */
+@media all and (min-width: 750px) and (max-width: 1100px)
+{
+   .panel-punchline { font-size: 22pt; margin-bottom: -6px; }
+   .panel-intro     { font-size: 14pt; }
+   .panel-intro i   { font-size: 16px; }
+}
+
+@media all and (max-width: 749px)
+{
+   .panel-punchline { font-size: 16pt; margin-bottom: -4px; }
+   .panel-intro     { font-size: 10pt; }
+   .panel-intro i   { font-size: 12px; }
 }
