Moved name banner to CDN

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body
    width: 627px;
    height: 236px;
 
-   background-image: url(name-banner.png);
+   background-image: url(http://i.imgur.com/DgMH8Gr.png);
 }
 
 #menu
